res:dock:: fix system tray gets wrong position.
because set the width of element to 48.

--- a/resources/dock/css/list.css
+++ b/resources/dock/css/list.css
@@ -8,7 +8,7 @@
 .AppItem {
     position:relative;
     margin: 0 3px;
-    max-width: 48px;
+    width: 48px;
     height:54px;
     max-height: 60px;
     -webkit-box-flex: 1;
